--- a/templates/listings/receipt.html
+++ b/templates/listings/receipt.html
@@ -43,10 +43,9 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h5>Shipping To:</h5>
-                            <p class="mb-0">{{ order.user.get_full_name }}</p>
+                            <p class="mb-0">{{ order.full_name }}</p>
                             <p class="mb-0">{{ order.shipping_address }}</p>
-                            <p class="mb-0">{{ order.city }}, {{ order.postal_code }}</p>
-                            <p class="mb-0">{{ order.country }}</p>
+                            <p class="mb-0">{{ order.shipping_city }}, {{ order.shipping_postal_code }}</p>
                         </div>
                         <div class="col-md-6 text-end">
                             <h5>Order Summary</h5>
