--- a/templates/listings/listing_detail.html
+++ b/templates/listings/listing_detail.html
@@ -220,7 +220,7 @@
                             <div class="mb-4">
                                 {% for item in can_review_items %}
                                     <div class="mb-3 p-3 border rounded">
-                                        <h6 class="mb-2">Leave a review for your purchase (Order Item #{{ item.id }})</h6>
+                                        <h6 class="mb-2">Leave a review!</h6>
                                         <form method="post">
                                             {% csrf_token %}
                                             <input type="hidden" name="order_item_id" value="{{ item.id }}">
